# starve-fox

./: README.md  README.org
haskell/starve-fox/: .gitignore  Makefile  starve-fox.cabal
haskell/starve-fox/app/: Main.hs
haskell/starve-fox/src/: StarveLib.hs
haskell/starve-fox/src/System/Random/: Shuffle.hs
haskell/starve-fox/test/: StarveFoxSpecs.hs  StarveFoxTest.hs
