cabal-version:      2.4
name:               starve-fox
version:            0.1.0.0

library
    exposed-modules:
        StarveLib
    build-depends:
        base ^>=4.14.3.0
    hs-source-dirs:
        src
    default-language: Haskell2010

test-suite starve-fox-tests
    type:
        exitcode-stdio-1.0
    main-is:
        StarveFoxSpecs.hs
    hs-source-dirs:
        test
    other-modules:
        StarveFoxTest
    build-depends:
        base,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        starve-fox
        
executable starve-fox
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        starve-fox

    hs-source-dirs:   app
    default-language: Haskell2010
